# Model-lightweighting

./: CMakeLists.txt  main.cpp
src/: Obj.cpp  Obj.h  Simplify.cpp  Simplify.h  SymmetricMatrix.h  Vec3f.h  Voxel.cpp  Voxel.h
